--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.0"
+    "mongoose": "^8.5.0",
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
