--- a/backend/package.json
+++ b/backend/package.json
@@ -15,23 +15,14 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-<<<<<<< HEAD
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.0",
-    "typescript": "^5.5.3"
+    "mongoose": "^8.5.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "ts-node-dev": "^2.0.0"
-=======
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "typescript": "^5.5.3"
->>>>>>> eaa70b487b32b913ae83b5421a8ae76f3ba035b8
   }
 }
