--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.2",
     "gsap": "^3.12.5",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
