--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,10 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.15",
-    "ts-node-dev": "^2.0.0"
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tslib": "^2.6.3"
   }
 }
