--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gsap/react": "^2.1.1",
+    "@types/google.maps": "^3.55.11",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.2",
     "gsap": "^3.12.5",
